# Hackagotchi

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  handoff.md  requirements.txt  setup-venv.sh
.githooks/: pre-commit
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: firmware-c.yml  host-tests.yml
case/: CAT_ENCLOSURE_SPEC.md  HACKAGOTCHI_CASE.md  POCKETTAP_CASE.md  hackagotchi_case.scad  pockettap_case.scad
docs/: RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.md  RELEASE_NOTES_v1.1.md  TODO.md  build-a-hackagotchi.md  c-firmware-analysis.md  c-firmware-build.md  engineering-plan.md  firmware-conventions.md  go-to-market.md  hackagotchiUI_upgrade_v1.1.md  mcu-bringup-playbook.md  monetization.md  recovery-model.md  release-readiness.md  roadmap.md  upstream-strategy.md
docs/media/: README.md
firmware/c/: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY-NOTICES.md  analyze.sh  build_fork.sh  memmap_hackagotchi_pin.ld  setup.sh
firmware/c/boards/: board_debug_probe_config.h  board_hackagotchi_config.h  board_pockettap_config.h
firmware/c/src/: FreeRTOSConfig.h  ads1115.c  ads1115.h  cdc1_control.c  cdc_uart.c  crash_box.c  crash_box.h  dap_health.c  dap_health.h  feedback.c  feedback.h  hackagotchi_dashboard.c  hackagotchi_dashboard.h  hg_config.c  hg_config.h  hg_input.c  hg_input.h  i2c1_bus.c  i2c1_bus.h  input_logic.c  input_logic.h  main.c  neopixel_anim.c  neopixel_anim.h  recorder.c  recorder.h  rtc_pcf8563.c  rtc_pcf8563.h  sd_gate.c  sd_gate.h  spsc_ring.h  tusb_config.h  uart_bridge.c  uart_bridge.h  usb_descriptors.c  watchdog_task.c  watchdog_task.h  ws2812.pio
firmware/c/src/sd/: ffconf.h  hw_config.c  sdio_stubs.c
firmware/c/src/ssd1306/: sprites.gen.h  sprites.spr  ssd1306.c  ssd1306.h  ssd1306_blit_impl.h
firmware/c/tests/: hil_ports.py
firmware/c/tests/gates/: GATE_RESULTS.md  README.md  gate0_check.sh  gate1_liveness.py  gate1_soak.sh  gate1_soak_openocd.sh  gate2_cdc.py  heap_plot.py  lib_target_state.sh  pin_toolchain.sh  usb_enum_snapshot.sh
firmware/c/tests/gates/fixtures/: build_fixtures.sh
firmware/c/tests/m1/: M1_RESULTS.md  crashbox_hil.py  jsmn_hil.py  ring_test.c  uart_bridge_hil.py  watchdog_hil.py  watchdog_soak.py
firmware/c/tests/m2/: M2_RESULTS.md  coexist_soak.py  recorder_test.c  rtc_hil.py
firmware/c/tests/m3/: M3_RESULTS.md  feedback_hil.py  screen_hil.py
firmware/c/tests/m4/: M4_RESULTS.md  baud_hil.py  config_hil.py  hex_hil.py  macro_hil.py  sd_hil.py
firmware/c/tests/m_ui/: M_UI_RESULTS.md  blit_test.c  companion_hil.py  input_logic_test.c  neopixel_anim_test.c
firmware/c/tools/: load_sim.py  spr_gen.py
firmware/micropython/: main.py
firmware/micropython/lib/: README.md
host/: README.md  hackagotchi_ctl.py  pockettap_ctl.py
host/tests/: ctl_selftest.py
